--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
     padding-bottom: 40px;
   }
 
-  @font-face {
+ /* @font-face {
     font-family: 'Moritz Sans';
     src: url('https://moritzgauss.com/assets/moritzsans-condensed-webfont.woff') format('woff');
   }
@@ -17,7 +17,7 @@ body {
   @font-face {
     font-family: 'Moritz Sans Neue Bold';
     src: url('https://moritzgauss.com/assets/moritzsans-neue-condensed-bold.woff') format('woff');
-  }
+  } */
 
 .header-container {
     display: flex;
@@ -43,7 +43,7 @@ body {
 }
 
 .moritz {
-    font-size: 34px;
+    font-size: 28px;
     display: inline-block;
 }
 
@@ -54,7 +54,7 @@ body {
     font-weight: normal;
     line-height: 1;
     color: black;
-    letter-spacing: -2px;
+    letter-spacing: -3px;
     white-space: nowrap;
     box-sizing: border-box; 
     text-decoration: none;
