style.css aktualisieren

--- a/style.css
+++ b/style.css
@@ -67,12 +67,21 @@ body {
     padding-right: 4px;
 }
 
+.subtitle {
+    font-family: Times, serif;
+    font-size: 14px;
+    font-weight: 300;
+    margin-top: -6px;
+    margin-bottom: 0;
+    text-align: left;
+}
+
 nav {
     display: flex;
     width: 100%;
     justify-content: space-between;
     align-items: flex-start;
-    margin-top: 20px;
+    margin-top: 6px;
     margin-bottom: 10px;
 }
 
@@ -244,6 +253,9 @@ background-color: #fff;
         font-size: 72px;
         letter-spacing: -5px;
     }
+    .subtitle {
+      font-size: 28px;
+      }
     .content {
         margin-left: 20px;
     }
