--- a/style.css
+++ b/style.css
@@ -120,6 +120,7 @@ nav a.active {
  }   
 
  .info {
+    min-height: 120px;
     overflow: hidden;
     word-wrap: break-word;
     overflow-wrap: break-word;
