--- a/style.css
+++ b/style.css
@@ -3,13 +3,12 @@ body {
     background: white;
     display: flex;
     flex-direction: column;
-    /*font-family: 'Moritz Sans', sans-serif;*/
-    font-family: Helvetica,  Arial, sans-serif;
+    font-family: 'Moritz Sans', sans-serif; 
     margin: 0;
     padding-bottom: 40px;
   }
 
-  /*@font-face {
+  @font-face {
     font-family: 'Moritz Sans';
     src: url('https://moritzgauss.com/assets/moritzsans-condensed-webfont.woff') format('woff');
   }
@@ -17,7 +16,7 @@ body {
   @font-face {
     font-family: 'Moritz Sans Neue Bold';
     src: url('https://moritzgauss.com/assets/moritzsans-neue-condensed-bold.woff') format('woff');
-  }*/
+  }
 
 
   
@@ -49,13 +48,13 @@ body {
 }
 
 .logo a {
-    /*font-family: 'Moritz Sans Neue Bold', sans-serif;*/
+    font-family: 'Moritz Sans Neue Bold', sans-serif;
     font-family: Helvetica,  Arial, sans-serif;
     font-size: 2em;
     font-weight: normal;
     line-height: 1;
     color: black;
-    letter-spacing: -2.5px;
+    letter-spacing: -0.075em;
     white-space: nowrap;
     box-sizing: border-box; 
     text-decoration: none;
@@ -273,7 +272,6 @@ nav a.active {
     }
     .logo a {
         font-size: 5em;
-        letter-spacing: -5px;
     }
     .logo-image img {
         height: 72px;
